// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-eSLCzr {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-eSLCzr:not([disabled]):hover {
    border-color: var(--colors-blue900);
  }

  .c-eSLCzr:not([disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-eSLCzr[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-eSLCzr::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }

  .c-fNCeYG {
    color: var(--colors-danger);
    margin-left: var(--space-1);
    font-weight: 400;
  }

  .c-jgdwfn {
    display: flex;
  }

  .c-jgdwfn > * {
    margin: 0;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-fzYfTW {
    flex-shrink: 0;
    margin-right: var(--space-2);
  }
}

@media  {
  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-eSLCzr-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-eSLCzr-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }

  .c-jgdwfn-ejCoEP-direction-row {
    flex-direction: row;
  }

  .c-jgdwfn-XefLA-wrap-wrap {
    flex-wrap: wrap;
  }

  .c-jgdwfn-awKDG-justify-start {
    justify-content: flex-start;
  }

  .c-jgdwfn-jroWjL-align-center {
    align-items: center;
  }

  .c-jgdwfn-dlytZv-gap-3 {
    margin-top: calc(var(--space-3)*-1);
    margin-left: calc(var(--space-3)*-1);
  }

  .c-jgdwfn-dlytZv-gap-3 > * {
    margin-top: var(--space-3);
    margin-left: var(--space-3);
  }

  .c-PJLV-iymbh-theme-error {
    color: var(--colors-danger);
  }

  .c-dbrbZt-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dyvMgW-igrKRUr-css {
    display: block;
    font-weight: 600;
  }

  .c-PJLV-ijkHUQU-css {
    margin-top: var(--space-2);
  }

  .c-dyvMgW-iiTbKsx-css {
    transform: translateY(var(--space-0));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dyvMgW-igrKRUr-css"
          for="INPUT FIELD"
        >
          INPUT FIELD
          <span
            aria-hidden="true"
            class="c-fNCeYG"
          >
            *
          </span>
        </label>
      </div>
      <input
        class="c-eSLCzr c-eSLCzr-pHZal-size-md c-eSLCzr-bXVTjQ-state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <div
        class="c-PJLV c-PJLV-ijkHUQU-css"
      >
        <div
          class="c-jgdwfn c-jgdwfn-ejCoEP-direction-row c-jgdwfn-XefLA-wrap-wrap c-jgdwfn-awKDG-justify-start c-jgdwfn-jroWjL-align-center c-jgdwfn-dlytZv-gap-3"
        >
          <div
            class="c-dhzjXW c-PJLV c-PJLV-iymbh-theme-error"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-fzYfTW"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v5"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="16"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="c-dyvMgW c-dyvMgW-bndJoy-size-sm c-dyvMgW-iiTbKsx-css"
            >
              This field is required
            </span>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-eSLCzr {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-eSLCzr:not([disabled]):hover {
    border-color: var(--colors-blue900);
  }

  .c-eSLCzr:not([disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-eSLCzr[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-eSLCzr::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }
}

@media  {
  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-eSLCzr-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dyvMgW-igrKRUr-css {
    display: block;
    font-weight: 600;
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dyvMgW-igrKRUr-css"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-eSLCzr c-eSLCzr-pHZal-size-md"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="number"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-eSLCzr {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-eSLCzr:not([disabled]):hover {
    border-color: var(--colors-blue900);
  }

  .c-eSLCzr:not([disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-eSLCzr[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-eSLCzr::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }
}

@media  {
  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-eSLCzr-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dyvMgW-igrKRUr-css {
    display: block;
    font-weight: 600;
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dyvMgW-igrKRUr-css"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-eSLCzr c-eSLCzr-pHZal-size-md"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
